# Graph_algorithm

./: CMakeLists.txt  OUT.xlsx  README.md  Result.out  ResultMod.out  all.cpp  benchmark.py  default.cpp  modified.cpp  parse.py  source.cpp  Описание.docx
Alg/: base.cpp  base.hpp  common.cpp  common.hpp  mod.cpp  mod.hpp
benchmark_set/: ISPD98_ibm01.hgr.part.2  ISPD98_ibm02.hgr.part.2  ISPD98_ibm03.hgr.part.2  ISPD98_ibm04.hgr.part.2  ISPD98_ibm05.hgr.part.2  ISPD98_ibm06.hgr.part.2  ISPD98_ibm07.hgr.part.2  ISPD98_ibm08.hgr.part.2  ISPD98_ibm09.hgr.part.2  ISPD98_ibm10.hgr.part.2  ISPD98_ibm11.hgr.part.2  ISPD98_ibm12.hgr.part.2  ISPD98_ibm13.hgr.part.2  ISPD98_ibm14.hgr.part.2  ISPD98_ibm15.hgr.part.2  ISPD98_ibm16.hgr.part.2  ISPD98_ibm17.hgr.part.2  ISPD98_ibm18.hgr.part.2  dac2012_superblue11.hgr.part.2  dac2012_superblue12.hgr.part.2  dac2012_superblue14.hgr.part.2  dac2012_superblue16.hgr.part.2  dac2012_superblue19.hgr.part.2  dac2012_superblue2.hgr.part.2  dac2012_superblue3.hgr.part.2  dac2012_superblue6.hgr.part.2  dac2012_superblue7.hgr.part.2  dac2012_superblue9.hgr.part.2
